2003-01-25    <johan@balder>

	* src/SDCCglue.c: A better fix for bug #661910
	* src/SDCCast.c: A better fix for bug #661910
	* src/SDCCglue.c (emitRegularMap): That was a little too efficient

2003-01-24  Bernhard Held <bernhard@bernhardheld.de>

	* src/Makefile.in: remove spawn.o
	* src/SDCCmain.c: remove spawn.h
	* src/SDCCmain.c (printVersionInfo): report MINGW32 instead of UNIX
	* src/spawn.c: removed
	* src/spawn.h: removed
	* support/regression/ports/ds390/spec.mk: link with -r

2003-01-24    <johan@CP255758-A>

	* src/ds390/gen.c (aopOp): fixed bug #667458
	* src/SDCCglue.c (emitRegularMap): fixed bug #458099 again
	* src/SDCCast.c (createIvalCharPtr): fixed bug #661910
	(createIvalCharPtr): an ival doesn't always have a storage class anymore

2003-01-24  Bernhard Held <bernhard@bernhardheld.de>

	* src/mcs51/peeph.def: better assembler identation by Frieder
	* src/mcs51/gen.c: better assembler identation by Frieder

2003-01-22  Bernhard Held <bernhard@bernhardheld.de>

	* as/z80/string.h: removed for gcc 3.2
	* support/makebin/makebin.c: #include <string.h> for gcc 3.2
	* src/pic/pcode.c (get_op_from_instruction): fix concatenation of string literals with __FUNCTION__ for gcc 3.2

2003-01-19  Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCmain.c (linkEdit): rename mem and map files even in case of failure
	* src/SDCCpeeph.c (replaceRule): fix bug #663503
	* support/regression/Makefile: separate temp files for ports
	* support/regression/generate-cases.py: separate temp files for ports
	* src/mcs51/peeph.def: Frieder: removed 237 (obsolete by 236g and 105); added 237 a/b
	* src/ds390/peeph.def: Frieder: removed 237 (obsolete by 236g and 105); added 237 a/b

2003-01-19  Bernhard Held <bernhard@bernhardheld.de>

	* moved tinitalk to device/examples/ds390

2003-01-14  Bernhard Held <bernhard@bernhardheld.de>

	* as/mcs51/lkmem.c: rflag is for DS390
	* src/SDCCglobl.h: removed out_name and options stackOnData, genericPtr